kubernetes/apps/default/espial/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: espial
  labels: &labels
    app.kubernetes.io/part-of: espial
    app.kubernetes.io/name: espial
    app.kubernetes.io/component: server
spec:
  replicas: 1
  revisionHistoryLimit: 0
  selector:
    matchLabels:
      <<: *labels
  template:
    metadata:
      labels:
        <<: *labels
    spec:
      restartPolicy: Always
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: espial-data
      containers:
        - name: espial
          image: jonschoning/espial:espial
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /app/data
          ports:
            - containerPort: 3000
              name: http
      nodeSelector:
        kubernetes.io/arch: amd64
