kubernetes/apps/default/espial/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: espial
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt'
spec:
  ingressClassName: 'traefik'
  rules:
    - host: espial.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: espial
                port:
                  name: http
  tls:
    - secretName: espial-tls
      hosts:
        - espial.fadhlika.com
